Move to Java 8; we really don't need much from new stuff