@@ -17,6 +17,7 @@ import eu.maveniverse.maven.toolrunner.shared.spi.ToolDetector;
 import eu.maveniverse.maven.toolrunner.shared.spi.ToolExecutor;
 import eu.maveniverse.maven.toolrunner.shared.spi.ToolProvider;
 import eu.maveniverse.maven.toolrunner.shared.spi.ToolProvisioner;
+import eu.maveniverse.maven.toolrunner.shared.support.IOTools;
 import eu.maveniverse.maven.toolrunner.shared.support.OSTools;
 import eu.maveniverse.maven.toolrunner.shared.support.ProcessBuilderExecutor;
 import eu.maveniverse.maven.toolrunner.shared.support.Provisioners;
@@ -24,11 +25,14 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Stream;
@@ -76,7 +80,7 @@ public class MavenProvider implements ToolProvider, ToolDetector, ToolProvisione
         // detect from path; if allowed
         if (context.allowPathDetection()) {
             Set<Path> paths =
-                    OSTools.dereference(OSTools.which(MavenProvider.EXE_NAME).orElse(Set.of()));
+                    IOTools.dereference(OSTools.which(MavenProvider.EXE_NAME).orElse(Collections.emptySet()));
             // consider only those ending with `bin/$EXE_NAME`
             for (Path executable : paths) {
                 if (executable.toString().replace("\\", "/").endsWith("/bin/" + MavenProvider.EXE_NAME)) {
@@ -98,23 +102,24 @@ public class MavenProvider implements ToolProvider, ToolDetector, ToolProvisione
             });
         }
 
-        return List.copyOf(detected);
+        return Collections.unmodifiableList(detected);
     }
 
     /**
      * Collects basic information about discovered Maven home.
      */
-    protected Optional<Map<String, String>> tryHome(ToolContext context, Path mavenHome) throws IOException {
+    protected Optional<Map<String, String>> tryHome(ToolContext context, Path home) throws IOException {
         ByteArrayOutputStream out = new ByteArrayOutputStream();
         ByteArrayOutputStream err = new ByteArrayOutputStream();
 
-        Optional<Map<String, String>> maybeExisting = Provisioners.loadMetadata(context, mavenHome);
+        Optional<Map<String, String>> maybeExisting = Provisioners.loadMetadata(context, home);
         if (maybeExisting.isPresent()) {
             return maybeExisting;
         }
 
         // execute and discover information
-        Map<String, String> metadata = new HashMap<>(Map.of(MavenProvider.HOME, mavenHome.toString()));
+        Map<String, String> metadata = new HashMap<>();
+        metadata.put(MavenProvider.HOME, home.toString());
         ToolExecution.Builder exe = executionTemplate(context, metadata)
                 .addArguments("-v", "-q")
                 .stdOut(out)
@@ -123,13 +128,11 @@ public class MavenProvider implements ToolProvider, ToolDetector, ToolProvisione
         try {
             ToolHandle.Result result = executeTool(context, metadata, exe.build());
             if (result.success()) {
-                return Optional.of(Map.of(
-                        ToolHandler.TOOL_NAME,
-                        MavenProvider.NAME,
-                        ToolHandler.TOOL_VERSION,
-                        out.toString().trim(),
-                        MavenProvider.HOME,
-                        mavenHome.toString()));
+                HashMap<String, String> md = new HashMap<>();
+                md.put(ToolHandler.TOOL_NAME, NAME);
+                md.put(ToolHandler.TOOL_VERSION, out.toString().trim());
+                md.put(MavenProvider.HOME, home.toString());
+                return Optional.of(md);
             }
             return Optional.empty();
         } catch (InterruptedException e) {
@@ -157,10 +160,18 @@ public class MavenProvider implements ToolProvider, ToolDetector, ToolProvisione
         Optional<Artifact> maybeDistro =
                 Provisioners.resolveArtifact(context, "org.apache.maven:apache-maven:zip:bin:" + version);
         if (maybeDistro.isPresent()) {
-            Provisioners.unpack(context, maybeDistro.orElseThrow().getFile().toPath(), installDir, false);
+            Provisioners.unpack(
+                    context,
+                    maybeDistro
+                            .orElseThrow(() -> new NoSuchElementException("No value present"))
+                            .getFile()
+                            .toPath(),
+                    installDir,
+                    false);
             Optional<Map<String, String>> provisioned = tryHome(context, installDir);
             if (provisioned.isPresent()) {
-                Map<String, String> provisionedMetadata = new HashMap<>(provisioned.orElseThrow());
+                Map<String, String> provisionedMetadata =
+                        new HashMap<>(provisioned.orElseThrow(() -> new NoSuchElementException("No value present")));
                 if (Provisioners.RELEASE_VERSION.equals(version)) {
                     Path versionedInstallDir = context.installationDirectory()
                             .resolve(NAME + "-" + requireNonNull(provisionedMetadata.get(ToolHandler.TOOL_VERSION)));
@@ -183,8 +194,10 @@ public class MavenProvider implements ToolProvider, ToolDetector, ToolProvisione
         ToolExecution.Builder builder;
         String mavenHome = metadata.get(MavenProvider.HOME);
         if (mavenHome != null) {
-            builder = ToolExecution.ofCommand(
-                    Path.of(mavenHome).resolve("bin/" + MavenProvider.EXE_NAME).toString());
+            builder = ToolExecution.ofCommand(Paths.get(mavenHome)
+                    .resolve("bin")
+                    .resolve(MavenProvider.EXE_NAME)
+                    .toString());
         } else {
             builder = ToolExecution.ofCommand(MavenProvider.EXE_NAME);
         }
